--- a/public/index.html
+++ b/public/index.html
@@ -5,12 +5,24 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="index.js"></script>
   <link rel="stylesheet" href="styles.css">
-  <title>Document</title>
+  <title>DUBHACKS</title>
+  <link rel="icon" type="image/x-icon" href="img/favicon.ico">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600&display=swap" rel="stylesheet">
 </head>
 <body>
-  <h1>hello!</h1>
+  <section id="title" class="flex">
+    <div>
+      <img src="img/logo.png" alt="logo">
+      <h1>TITLE</h1>
+    </div>
+    <div>
+      <button>Add Category</button>
+      <button>Add Category</button>
+      <button>Add Category</button>
+      <button>Add Category</button>
+    </div>
+  </section>
 </body>
 </html>
