--- a/public/index.html
+++ b/public/index.html
@@ -3,14 +3,20 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script src="index.js"></script>
+  <script src="index.js" defer></script>
   <link rel="stylesheet" href="styles.css">
   <title>DUBHACKS</title>
   <link rel="icon" type="image/x-icon" href="img/favicon.ico">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600&display=swap" rel="stylesheet">
+  <title>Speeeed Typing</title>
 </head>
 <body>
+  <div class="timer" id="timer">0</div>
+  <div class="container">
+    <div class="quote-display" id="quote_display">quote</div>
+    <textarea class="quote-input" id="quote-input" autofocus>quote</textarea>
+  </div>
 </body>
 </html>
