words and reformat script tags

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,6 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script src="index.js" defer></script>
   <link rel="stylesheet" href="styles.css">
   <title>DUBHACKS</title>
   <link rel="icon" type="image/x-icon" href="img/favicon.ico">
@@ -11,6 +10,8 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600&display=swap" rel="stylesheet">
   <title>Speeeed Typing</title>
+  <script src="words.js"></script>
+  <script src="index.js" defer></script>
 </head>
 <body>
   <div class="timer" id="timer">0</div>
