--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600&display=swap" rel="stylesheet">
   <title>Speeeed Typing</title>
+  <script type="text/javascript" src="./handwriting.canvas.js"></script>
   <script src="words.js"></script>
   <script src="index.js" defer></script>
 </head>
