--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
   <div class="timer" id="timer">0</div>
   <div class="container">
     <div class="quote-display" id="quote_display">quote</div>
-    <textarea class="quote-input" id="quote-input" autofocus>quote</textarea>
+    <textarea class="quote-input" id="quote_input" autofocus>quote</textarea>
   </div>
 </body>
 </html>
