WIP transfer to Mac

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,12 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600&display=swap" rel="stylesheet">
   <title>Speeeed Typing</title>
 
+    <!-- Fetch the Firebase and Cloud Firestore Javascript libraries -->
+    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
+
   <script type="text/javascript" src="./handwriting.canvas.js"></script>
+  <!-- <script type="module" src="./imports.js"></script> -->
   <script src="words.js"></script>
   <script src="index.js" defer></script>
 </head>
@@ -26,7 +31,7 @@
       <section id="canvas-section"></section>
       <section id="user-button"></section>
     </div>
+  
   </section>
-
 </body>
 </html>
