--- a/public/index.html
+++ b/public/index.html
@@ -11,13 +11,27 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600&display=swap" rel="stylesheet">
   <title>Speeeed Typing</title>
 
-    <!-- Fetch the Firebase and Cloud Firestore Javascript libraries -->
-    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
+  <!-- Fetch the Firebase and Cloud Firestore Javascript libraries -->
+  <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
 
   <script type="text/javascript" src="./handwriting.canvas.js"></script>
   <!-- <script type="module" src="./imports.js"></script> -->
   <script src="words.js"></script>
+  <script>
+    const firebaseConfig = {
+      apiKey: "AIzaSyCsmqZ8Y87u9k3xofzcMapRdleSDQQGjPQ",
+      authDomain: "write-racer.firebaseapp.com",
+      databaseURL: "https://write-racer-default-rtdb.firebaseio.com/",
+      projectId: "write-racer",
+      storageBucket: "write-racer.appspot.com",
+      messagingSenderId: "630514342479",
+      appId: "1:630514342479:web:6ad281678526d0a731683a",
+      measurementId: "G-FGC783LTR9"
+    };
+
+    firebase.initializeApp(firebaseConfig);
+  </script>
   <script src="index.js" defer></script>
 </head>
 <body>
@@ -27,11 +41,10 @@
       <div class="quote-display" id="quote_display">quote</div>
     </div>
     <div class="container" id="user-area">
-      <section id="input-result"><p>test</p></section>
+      <section id="input-result"><p></p></section>
       <section id="canvas-section"></section>
       <section id="user-button"></section>
     </div>
-  
   </section>
 </body>
 </html>
