--- a/public/index.html
+++ b/public/index.html
@@ -13,28 +13,48 @@
 
   <!-- Fetch the Firebase and Cloud Firestore Javascript libraries -->
   <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
-
+  <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-database.js"></script>
   <script type="text/javascript" src="./handwriting.canvas.js"></script>
-  <!-- <script type="module" src="./imports.js"></script> -->
   <script src="words.js"></script>
-  <script>
+  <script type="module" defer>
+    // Import the functions you need from the SDKs you need
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/9.12.1/firebase-app.js";
+    import { getAnalytics } from "https://www.gstatic.com/firebasejs/9.12.1/firebase-analytics.js";
+    // TODO: Add SDKs for Firebase products that you want to use
+    // https://firebase.google.com/docs/web/setup#available-libraries
+
+    // Your web app's Firebase configuration
+    // For Firebase JS SDK v7.20.0 and later, measurementId is optional
     const firebaseConfig = {
       apiKey: "AIzaSyCsmqZ8Y87u9k3xofzcMapRdleSDQQGjPQ",
       authDomain: "write-racer.firebaseapp.com",
-      databaseURL: "https://write-racer-default-rtdb.firebaseio.com/",
+      databaseURL: "https://write-racer-default-rtdb.firebaseio.com",
       projectId: "write-racer",
       storageBucket: "write-racer.appspot.com",
       messagingSenderId: "630514342479",
-      appId: "1:630514342479:web:6ad281678526d0a731683a",
-      measurementId: "G-FGC783LTR9"
+      appId: "1:630514342479:web:188e6829dbecc6fd31683a",
+      measurementId: "G-JZKVP84H60"
     };
 
-    firebase.initializeApp(firebaseConfig);
+    console.log("hello");
+    // Initialize Firebase
+    const app = firebase.initializeApp(firebaseConfig);
+    const analytics = getAnalytics(app);
   </script>
   <script src="index.js" defer></script>
 </head>
 <body>
+
+  <section id="menu" class="flex hidden">
+    <section id="title">
+      <h1>Write Racer</h1>
+    </section>
+    <section id="menu-buttons">
+      <button>JOIN GAME!</button>
+    </section>
+  </section>
   <section id="game">
     <div class="timer" id="timer">0</div>
     <div class="container">
