--- a/public/index.html
+++ b/public/index.html
@@ -47,7 +47,7 @@
 </head>
 <body>
 
-  <section id="menu" class="flex hidden">
+  <section id="menu" class="flex">
     <section id="title">
       <h1>Write Racer</h1>
     </section>
@@ -55,7 +55,13 @@
       <button>JOIN GAME!</button>
     </section>
   </section>
-  <section id="game">
+
+  <section id="queue" class="flex hidden">
+    <h1> this is the queue screen</h1>
+
+  </section>
+
+  <section id="game" class="hidden">
     <div class="timer" id="timer">0</div>
     <div class="container">
       <div class="quote-display" id="quote_display">quote</div>
