--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 </head>
 <body>
 
-  <section id="menu" class="flex hidden">
+  <section id="menu" class="flex">
     <section id="title">
       <h1>Write Racer</h1>
     </section>
@@ -60,13 +60,13 @@
     <h1> this is the queue screen</h1>
   </section>
 
-  <section id="game" class="">
+  <section id="game" class="hidden">
     <div class="timer" id="timer">0</div>
     <div class="container">
       <div class="quote-display" id="quote_display">quote</div>
     </div>
     <div class="container" id="progress-bars">
-      <div>
+      <!-- <div>
         <p>P1</p>
         <progress value="0" max="100"></progress>
       </div>
@@ -81,7 +81,7 @@
       <div>
         <p>P4</p>
         <progress value="50" max="100"></progress>
-      </div>
+      </div> -->
 
 
     </div>
