--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600&display=swap" rel="stylesheet">
-  <title>Speeeed Typing</title>
+  <title>Writer's Block</title>
 
   <!-- Fetch the Firebase and Cloud Firestore Javascript libraries -->
   <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
@@ -49,7 +49,7 @@
 
   <section id="menu" class="flex">
     <section id="title">
-      <h1>Write Racer</h1>
+      <h1>Writer's Block</h1>
     </section>
     <section id="menu-buttons">
       <button>JOIN GAME!</button>
