--- a/index.html
+++ b/index.html
@@ -56,8 +56,11 @@
     </section>
   </section>
 
-  <section id="queue" class="flex hidden">
-    <h1> this is the queue screen</h1>
+  <section id="queue" class="hidden">
+    <div class="container">
+      <h1>Queuing for a game!</h1>
+      <p>Currently <span id="people-amount">1</span><span> </span>out of 4</p>
+    </div>
   </section>
 
   <section id="game" class="hidden">
