added end screen

--- a/index.html
+++ b/index.html
@@ -94,5 +94,18 @@
       <section id="user-button"></section>
     </div>
   </section>
+  <section id="lost" class="hidden">
+    <div class="container">
+      <h1>You Lost!</h1>
+      <button id="lost-button">Return to Main Menu</button>
+    </div>
+  </section>
+  <section id="won" class="hidden">
+    <div class="container">
+      <h1>Queuing for a game!</h1>
+      <button id="won-button">Return to Main Menu</button>
+    </div>
+  </section>
+
 </body>
 </html>
