--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
   </section>
   <section id="won" class="hidden">
     <div class="container">
-      <h1>Queuing for a game!</h1>
+      <h1>You Won!</h1>
       <button id="won-button">Return to Main Menu</button>
     </div>
   </section>
